# rust-sdk-airdropper

./: Cargo.toml  recipients.csv
src/: main.rs
